# terraria-rag

./: .env  .env.example  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  chunking.md  cleaning.md  crawler.md  embedding.md  interview.md  retrieval.md
scripts/: 01_enumerate.py  02_crawl.py  03_clean_chunk.py  04_index.py  05_serve.py
src/terraria_rag/: __init__.py  config.py
src/terraria_rag/api/: server.py
src/terraria_rag/chunking/: splitter.py
src/terraria_rag/cleaning/: wikitext.py
src/terraria_rag/crawler/: api_client.py
src/terraria_rag/embedding/: bge.py
src/terraria_rag/store/: qdrant_store.py
