[project]
name = "terraria-rag"
version = "0.1.0"
description = "RAG over the Chinese Terraria Wiki (terraria.wiki.gg/zh)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # crawler
    "httpx>=0.27",
    "tenacity>=9.0",
    "tqdm>=4.66",
    # wikitext cleaning
    "mwparserfromhell>=0.6.6",
    # embedding (BGE-M3)
    "FlagEmbedding>=1.3.0",
    "transformers>=4.40,<5.0",  # FlagEmbedding 1.3.x not yet compatible with transformers 5.x
    "torch>=2.2",
    # vector store
    "qdrant-client>=1.12",
    # api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # misc
    "orjson>=3.10",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terraria_rag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
